# ADSLib

./: CMakeLists.txt  README.md  main.cpp
includes/: Ads.h  AdsException.h  AdsHandler.h  AdsInfos.h
srcs/: Ads.cpp  AdsHandler.cpp
